objects/MY_Partner__c.object
<CustomObject>
    <description>testing object</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>testing</description>
        <label>Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCU_Demo__c</fullName>
        <label>ICCU Demo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXFSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TXFSC Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>autoid__c</fullName>
        <description>gffjlf</description>
        <displayFormat>A-{0000}</displayFormat>
        <label>autoid</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cost__c</fullName>
        <label>cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone number</label>
        <type>Phone</type>
    </fields>
    <label>MY Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY partners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>